// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardText Snapshot > Checkbox 1`] = `
<div>
  <div
    style="max-width: 400px;"
  >
    <div
      class="_CardText_349b40"
    >
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-0-v1"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-0-v1"
              name="card-text"
              type="checkbox"
              value="v1"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check _ChoiceMark_8d554d"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 1"
              >
                Option 1
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-1-v2"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-1-v2"
              name="card-text"
              type="checkbox"
              value="v2"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check _ChoiceMark_8d554d"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined"
              >
                Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-2-v3"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-2-v3"
              name="card-text"
              type="checkbox"
              value="v3"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check _ChoiceMark_8d554d"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 3"
              >
                Option 3
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-3-v4"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-3-v4"
              name="card-text"
              type="checkbox"
              value="v4"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check _ChoiceMark_8d554d"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 4"
              >
                Option 4
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-4-v5"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-4-v5"
              name="card-text"
              type="checkbox"
              value="v5"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeCheckbox_8d554d _ChoiceStateIdle_8d554d"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-check _ChoiceMark_8d554d"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 5"
              >
                Option 5
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`CardText Snapshot > DefaultValues 1`] = `
<div>
  <div
    style="max-width: 400px;"
  >
    <div
      class="_CardText_349b40"
    >
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-0-v1"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-0-v1"
              name="card-text"
              type="radio"
              value="v1"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 1"
              >
                Option 1
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-1-v2"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-1-v2"
              name="card-text"
              type="radio"
              value="v2"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined"
              >
                Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-2-v3"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-2-v3"
              name="card-text"
              type="radio"
              value="v3"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 3"
              >
                Option 3
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-3-v4"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-3-v4"
              name="card-text"
              type="radio"
              value="v4"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 4"
              >
                Option 4
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-4-v5"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-4-v5"
              name="card-text"
              type="radio"
              value="v5"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 5"
              >
                Option 5
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`CardText Snapshot > Radio 1`] = `
<div>
  <div
    style="max-width: 400px;"
  >
    <div
      class="_CardText_349b40"
    >
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-0-v1"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-0-v1"
              name="card-text"
              type="radio"
              value="v1"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 1"
              >
                Option 1
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-1-v2"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-1-v2"
              name="card-text"
              type="radio"
              value="v2"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined"
              >
                Option 2 / With very long text to be out of one line to see how it can be 2 or 3 lined
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-2-v3"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-2-v3"
              name="card-text"
              type="radio"
              value="v3"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 3"
              >
                Option 3
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-3-v4"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-3-v4"
              name="card-text"
              type="radio"
              value="v4"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 4"
              >
                Option 4
              </span>
            </div>
          </div>
        </div>
      </label>
      <label
        class="_RadioLabel_121793"
        data-testid="radio-label"
        for="card-text-4-v5"
      >
        <div
          class="_Box_a85640 _BoxStateIdle_a85640"
          data-testid="box"
        >
          <div
            class="_CardTextLabel_349b40"
          >
            <input
              class="_HiddenInput_1ed008"
              data-testid="hidden-input"
              id="card-text-4-v5"
              name="card-text"
              type="radio"
              value="v5"
            />
            <div
              class="_CardTextChoice_349b40"
            >
              <div
                class="_Choice_8d554d _ChoiceTypeRadio_8d554d _ChoiceStateIdle_8d554d"
              >
                <div
                  class="_ChoiceMark_8d554d"
                />
              </div>
            </div>
            <div
              class="_RadioText_7c88c7 _RadioTextSizeLg_7c88c7"
            >
              <span
                class="_RadioTextContent_7c88c7"
                data-checked="false"
                data-text="Option 5"
              >
                Option 5
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
